[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprites/Menus/logo.png" type="Texture" id=1]
[ext_resource path="res://dpcomic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[sub_resource type="Animation" id=13]
resource_name = "Fadein"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("Thing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Thing:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="Animation" id=14]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath("Thing:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "License"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Image:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Image:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Image:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Thing:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.4, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Thing:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 1, 0.372549, 0.341176, 1 )
border_width_bottom = 2
border_color = Color( 0.733333, 0.101961, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 1, 0.541176, 0.266667, 1 )
border_width_bottom = 2
border_color = Color( 0.67451, 0.27451, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.945098, 0.219608, 0.0980392, 1 )
border_width_bottom = 2
border_color = Color( 0.607843, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 3.0
expand_margin_right = 3.0
expand_margin_top = 1.0
anti_aliasing = false

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxFlat" id=22]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 1, 0.627451, 0, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 2
corner_radius_bottom_right = 5
corner_radius_bottom_left = 2
anti_aliasing = false

[sub_resource type="DynamicFont" id=23]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=12]
size = 12
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=25]
size = 15
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=26]
size = 40
font_data = ExtResource( 2 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Animations" type="AnimationPlayer" parent="."]
anims/Fadein = SubResource( 13 )
anims/Fadeout = SubResource( 14 )
anims/License = SubResource( 15 )

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="MainMenu"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -69.0
margin_right = 69.0
margin_bottom = -87.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = 4.0
margin_right = 25.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewRun" type="Button" parent="MainMenu/Buttons"]
margin_right = 50.0
margin_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 17 )
custom_styles/normal = SubResource( 19 )
custom_fonts/font = SubResource( 20 )
text = "New run"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="MainMenu/Buttons"]
margin_top = 22.0
margin_right = 50.0
margin_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="MainMenu/Buttons"]
margin_top = 42.0
margin_right = 50.0
margin_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="MainMenu"]
anchor_left = 0.32
anchor_top = 0.867
anchor_right = 0.682
anchor_bottom = 0.964
margin_left = 2.86102e-06
margin_top = -0.0749964
margin_right = 0.200007
margin_bottom = 0.100003
custom_styles/normal = SubResource( 22 )
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
placeholder_text = "Leave empty for random seed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.5
margin_top = -40.0
margin_right = 59.5
margin_bottom = 40.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoystickSensitivity" type="HSlider" parent="Settings"]
margin_right = 119.0
margin_bottom = 16.0
min_value = 1.0
max_value = 12.0
value = 1.0

[node name="Text" type="Label" parent="Settings/JoystickSensitivity"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -22.0
margin_right = 50.0
margin_bottom = -8.0
grow_horizontal = 2
custom_fonts/font = SubResource( 12 )
text = "Joystick Sensitivity: 12"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisualizeDamage" type="CheckBox" parent="Settings"]
margin_top = 16.0
margin_right = 119.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 12 )
text = "Visualize Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstantDeathButton" type="CheckBox" parent="Settings"]
margin_top = 40.0
margin_right = 119.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 12 )
text = "Instant Death Button"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="Settings"]
margin_top = 64.0
margin_right = 119.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Controls"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Settings"]
margin_top = 80.0
margin_right = 119.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="VBoxContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -96.0
margin_bottom = 96.0
grow_horizontal = 2
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heal" type="Button" parent="Controls"]
margin_right = 400.0
margin_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Heal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grab" type="Button" parent="Controls"]
margin_top = 16.0
margin_right = 400.0
margin_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Grab"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shoot" type="Button" parent="Controls"]
margin_top = 32.0
margin_right = 400.0
margin_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Shoot"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Drop" type="Button" parent="Controls"]
margin_top = 48.0
margin_right = 400.0
margin_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Drop"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up" type="Button" parent="Controls"]
margin_top = 64.0
margin_right = 400.0
margin_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Down" type="Button" parent="Controls"]
margin_top = 80.0
margin_right = 400.0
margin_bottom = 96.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Down"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Button" parent="Controls"]
margin_top = 96.0
margin_right = 400.0
margin_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Left"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="Controls"]
margin_top = 112.0
margin_right = 400.0
margin_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Right"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jump" type="Button" parent="Controls"]
margin_top = 128.0
margin_right = 400.0
margin_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Jump"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Button" parent="Controls"]
margin_top = 144.0
margin_right = 400.0
margin_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Extra Info"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Death" type="Button" parent="Controls"]
margin_top = 160.0
margin_right = 400.0
margin_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Instant Death"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="Controls"]
margin_top = 160.0
margin_right = 400.0
margin_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Reset To Default"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Controls"]
margin_top = 176.0
margin_right = 400.0
margin_bottom = 192.0
grow_horizontal = 2
grow_vertical = 2
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/focus = SubResource( 21 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = SubResource( 20 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thing" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Image" type="Control" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MadeWith" type="Label" parent="Image"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -49.0
margin_top = 203.0
margin_right = 50.0
margin_bottom = -8.0
custom_fonts/font = SubResource( 25 )
text = "Made With Godot"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sadblock" type="Label" parent="Image"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -212.0
margin_top = -18.5
margin_right = 212.0
margin_bottom = 18.5
custom_fonts/font = SubResource( 26 )
text = "SadBlockGames"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="Animations" to="." method="_on_animation_finished"]
[connection signal="pressed" from="MainMenu/Buttons/NewRun" to="." method="_on_NewRun_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="MainMenu/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="value_changed" from="Settings/JoystickSensitivity" to="." method="_on_JoystickSensitivity_value_changed"]
[connection signal="pressed" from="Settings/VisualizeDamage" to="." method="_on_VisualizeDamage_pressed"]
[connection signal="pressed" from="Settings/InstantDeathButton" to="." method="_on_InstantDeathButton_pressed"]
[connection signal="pressed" from="Settings/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Settings/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Controls/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Controls/Back" to="." method="_on_BackControl_pressed"]
